--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@
 cmake_minimum_required( VERSION 3.24 )
 
 include( cmake/DefineCompilerVendor.cmake )
-project( EmptyOMPTTool LANGUAGES C CXX )
+project( ompt-printf LANGUAGES C CXX )
 
 set( CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "Verbose makefile" )
 set( CMAKE_COMPILE_WARNING_AS_ERROR ON CACHE BOOL "Compile warnings as errors" )
