--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,7 +32,7 @@
 # OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-add_library( EmptyOMPTTool SHARED )
-target_sources( EmptyOMPTTool PRIVATE tool.cpp )
-target_compile_options( EmptyOMPTTool PUBLIC ${OMPT_C_FLAGS} ${OMPT_CXX_FLAGS} )
-target_link_options( EmptyOMPTTool PUBLIC ${OMPT_LINK_FLAGS} )
+add_library( ompt-printf SHARED )
+target_sources( ompt-printf PRIVATE tool.cpp )
+target_compile_options( ompt-printf PUBLIC ${OMPT_C_FLAGS} ${OMPT_CXX_FLAGS} )
+target_link_options( ompt-printf PUBLIC ${OMPT_LINK_FLAGS} )
