[Tool][CMake] Add symbol checks for 5.1/5.2
Signed-off-by: Jan André Reuter <j.reuter@fz-juelich.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ set( CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "Verbose makefile" )
 set( CMAKE_COMPILE_WARNING_AS_ERROR ON CACHE BOOL "Compile warnings as errors" )
 
 include( cmake/OMPTChecks.cmake )
-OMPT_CHECK_HEADER()
+OMPT_HEADER_CHECK()
 if( NOT HAVE_OMP_TOOLS_HEADER )
     message( FATAL_ERROR "omp-tools.h not found, but required for project" )
 endif()
