--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,9 +33,16 @@
 #
 
 add_library( ompt-printf SHARED )
-target_sources( ompt-printf PRIVATE tool.cpp )
+target_compile_features( ompt-printf PRIVATE cxx_std_17 )
 target_compile_options( ompt-printf PUBLIC ${OMPT_C_FLAGS} ${OMPT_CXX_FLAGS} )
-target_link_options( ompt-printf PUBLIC ${OMPT_LINK_FLAGS} )
 target_include_directories( ompt-printf PRIVATE ${CMAKE_CURRENT_BINARY_DIR} )
+target_link_options( ompt-printf PUBLIC ${OMPT_LINK_FLAGS} )
+target_sources( ompt-printf PRIVATE tool.cpp )
+
+set_target_properties( ompt-printf
+    PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO )
 
 configure_file( tool-definitions.h.in tool-definitions.h )
