[Tool] Update definitions header for TR13
Signed-off-by: Jan André Reuter <j.reuter@fz-juelich.de>

--- a/src/tool-definitions.h.in
+++ b/src/tool-definitions.h.in
@@ -75,4 +75,37 @@
 #define HAVE_OMPT_TARGET_MAP_FLAG_CLOSE @HAVE_OMPT_TARGET_MAP_FLAG_CLOSE@
 #define HAVE_OMPT_TARGET_MAP_FLAG_SHARED @HAVE_OMPT_TARGET_MAP_FLAG_SHARED@
 
+/* OpenMP TR13 */
+#define HAVE_OMPT_RECORD_TARGET_EMI @HAVE_OMPT_RECORD_TARGET_EMI@
+#define HAVE_OMPT_RECORD_TARGET_DATA_OP_EMI @HAVE_OMPT_RECORD_TARGET_DATA_OP_EMI@
+#define HAVE_OMPT_RECORD_TARGET_MAP_EMI @HAVE_OMPT_RECORD_TARGET_MAP_EMI@
+#define HAVE_OMPT_RECORD_TARGET_SUBMIT_EMI @HAVE_OMPT_RECORD_TARGET_SUBMIT_EMI@
+#define HAVE_OMPT_SUBVOLUME @HAVE_OMPT_SUBVOLUME@
+#define HAVE_OMPT_DEPENDENCE_TYPE_OUT_ALL_MEMORY @HAVE_OMPT_DEPENDENCE_TYPE_OUT_ALL_MEMORY@
+#define HAVE_OMPT_DEPENDENCE_TYPE_INOUT_ALL_MEMORY @HAVE_OMPT_DEPENDENCE_TYPE_INOUT_ALL_MEMORY@
+#define HAVE_OMPT_TARGET_DATA_TRANSFER @HAVE_OMPT_TARGET_DATA_TRANSFER@
+#define HAVE_OMPT_TARGET_DATA_MEMSET @HAVE_OMPT_TARGET_DATA_MEMSET@
+#define HAVE_OMPT_TARGET_DATA_TRANSFER_RECT @HAVE_OMPT_TARGET_DATA_TRANSFER_RECT@
+#define HAVE_OMPT_TARGET_DATA_TRANSFER_ASYNC @HAVE_OMPT_TARGET_DATA_TRANSFER_ASYNC@
+#define HAVE_OMPT_TARGET_DATA_MEMSET_ASYNC @HAVE_OMPT_TARGET_DATA_MEMSET_ASYNC@
+#define HAVE_OMPT_TARGET_DATA_TRANSFER_RECT_ASYNC @HAVE_OMPT_TARGET_DATA_TRANSFER_RECT_ASYNC@
+#define HAVE_OMPT_TASK_IMPORTING @HAVE_OMPT_TASK_IMPORTING@
+#define HAVE_OMPT_TASK_EXPORTING @HAVE_OMPT_TASK_EXPORTING@
+#define HAVE_OMPT_WORK_WORKDISTRIBUTE @HAVE_OMPT_WORK_WORKDISTRIBUTE@
+#define HAVE_OMPT_GET_BUFFER_LIMITS @HAVE_OMPT_GET_BUFFER_LIMITS@
+#define HAVE_OMPT_SYNC_REGION_BARRIER @HAVE_OMPT_SYNC_REGION_BARRIER@
+#define HAVE_OMPT_SYNC_REGION_BARRIER_IMPLICIT @HAVE_OMPT_SYNC_REGION_BARRIER_IMPLICIT@
+#define HAVE_OMPT_CALLBACK_TARGET @HAVE_OMPT_CALLBACK_TARGET@
+#define HAVE_OMPT_CALLBACK_TARGET_DATA_OP @HAVE_OMPT_CALLBACK_TARGET_DATA_OP@
+#define HAVE_OMPT_CALLBACK_TARGET_MAP @HAVE_OMPT_CALLBACK_TARGET_MAP@
+#define HAVE_OMPT_CALLBACK_TARGET_SUBMIT @HAVE_OMPT_CALLBACK_TARGET_SUBMIT@
+#define HAVE_OMPT_TARGET_DATA_TRANSFER_TO_DEVICE @HAVE_OMPT_TARGET_DATA_TRANSFER_TO_DEVICE@
+#define HAVE_OMPT_TARGET_DATA_TRANSFER_FROM_DEVICE @HAVE_OMPT_TARGET_DATA_TRANSFER_FROM_DEVICE@
+#define HAVE_OMPT_TARGET_DATA_TRANSFER_TO_DEVICE_ASYNC @HAVE_OMPT_TARGET_DATA_TRANSFER_TO_DEVICE_ASYNC@
+#define HAVE_OMPT_TARGET_DATA_TRANSFER_FROM_DEVICE_ASYNC @HAVE_OMPT_TARGET_DATA_TRANSFER_FROM_DEVICE_ASYNC@
+#define HAVE_OMPT_RECORD_TARGET @HAVE_OMPT_RECORD_TARGET@
+#define HAVE_OMPT_RECORD_TARGET_DATA_OP @HAVE_OMPT_RECORD_TARGET_DATA_OP@
+#define HAVE_OMPT_RECORD_TARGET_MAP @HAVE_OMPT_RECORD_TARGET_MAP@
+#define HAVE_OMPT_RECORD_TARGET_KERNEL @HAVE_OMPT_RECORD_TARGET_KERNEL@
+
 #endif /* PRINTF_TOOL_DEFINITIONS_H */
